--- a/src/app/components/forms/user-details-form/user-details-form.component.html
+++ b/src/app/components/forms/user-details-form/user-details-form.component.html
@@ -9,7 +9,8 @@
     text="{{'component.loading' | translate}}">
   </sm-loader>
 
-  <h3 class="ui dividing header">
+  <h3 class="ui horizontal divider pink header">
+    <i class="user icon"></i>
     {{'user.settings.form.personal.info.header' | translate}}
   </h3>
 
@@ -43,7 +44,8 @@
     [apiErrors]="apiErrors">
   </country-of-origin-input>
 
-  <h3 class="ui dividing header">
+  <h3 class="ui horizontal divider pink header">
+    <i class="marker icon"></i>
     {{'user.settings.form.address.header' | translate}}
   </h3>
 
@@ -54,7 +56,8 @@
     [apiErrors]="apiErrors">
   </address-input>
 
-  <h3 class="ui dividing header">
+  <h3 class="ui horizontal divider pink header">
+    <i class="money icon"></i>
     {{'user.settings.form.bank.details.header' | translate}}
   </h3>
 
@@ -64,7 +67,8 @@
     [apiErrors]="apiErrors">
   </bank-account-input>
 
-  <h3 class="ui dividing header">
+  <h3 class="ui horizontal divider pink header">
+    <i class="settings icon"></i>
     {{'user.settings.form.settings.header' | translate}}
   </h3>
 
@@ -73,7 +77,8 @@
     [apiErrors]="apiErrors">
   </system-language-input>
 
-  <h3 class="ui dividing header">
+  <h3 class="ui horizontal divider pink header">
+    <i class="lock icon"></i>
     {{'user.settings.form.change.password.header' | translate}}
   </h3>
 
