--- a/src/app/components/forms/user-profile-form/user-profile-form.component.html
+++ b/src/app/components/forms/user-profile-form/user-profile-form.component.html
@@ -10,7 +10,7 @@
 
   <h3 class="ui horizontal divider pink header">
     <i class="user icon"></i>
-    Personal presentation
+    {{'user.profile.form.personal.presentation.section.header' | translate}}
   </h3>
 
   <description-input
@@ -20,7 +20,7 @@
 
   <h3 class="ui horizontal divider pink header">
     <i class="id card icon"></i>
-    Status
+    {{'user.profile.form.status.section.header' | translate}}
   </h3>
 
   <status-input
@@ -97,7 +97,7 @@
 
   <h3 class="ui horizontal divider pink header">
     <i class="world icon"></i>
-    Language skills
+    {{'user.profile.form.language.skills.section.header' | translate}}
   </h3>
 
   <languages-input
@@ -108,7 +108,7 @@
 
   <h3 class="ui horizontal divider pink header">
     <i class="rocket icon"></i>
-    General skills
+    {{'user.profile.form.general.skills.section.header' | translate}}
   </h3>
 
   <competence-input
@@ -123,13 +123,8 @@
   </skills-input>
 
   <h3 class="ui horizontal divider pink header">
-    <i class="thumbs up icon"></i>
-    Fields of interest
-  </h3>
-
-  <h3 class="ui horizontal divider pink header">
     <i class="student icon"></i>
-    Education
+    {{'user.profile.form.education.section.header' | translate}}
   </h3>
 
   <education-input
@@ -139,7 +134,7 @@
 
   <h3 class="ui horizontal divider pink header">
     <i class="suitcase icon"></i>
-    Experience
+    {{'user.profile.form.work.experience.section.header' | translate}}
   </h3>
 
   <job-experience-input
