--- a/src/app/components/buttons/base-button/base-button.component.scss
+++ b/src/app/components/buttons/base-button/base-button.component.scss
@@ -3,15 +3,16 @@
 
 /*GENERAL*/
 .btn {
-  font-family: $default-font-family;
   border-radius: 30px;
+  border: 2px solid;
+  font-family: $default-font-family;
+  font-weight: 700;
+  line-height: 2.3;
+  margin: 15px 0;
+  outline:none !important;
+  text-align: center;
   text-decoration: none;
   text-transform: uppercase;
-  font-weight: 700;
-  text-align: center;
-  margin: 15px 0;
-  line-height: 2.3;
-  border: 2px solid;
   @include truncate-owerflowing-text;
 }
 /*FLUID*/
@@ -20,98 +21,98 @@
 }
 /*SIZE*/
 .btn.xsmall {
-  font-size: 12px;
+  font-size: $fs-s;
   padding: 0 10px;
   min-width: 100px;
 }
 
 .btn.small {
-  font-size: 14px;
+  font-size: $fs-m0;
   padding: 6px 25px;
   min-width: 100px;
   padding: 2px 25px;
 }
 
 .btn.medium {
-  font-size: 16px;
+  font-size: $fs-m;
   padding: 8px 30px;
   min-width: 150px;
 }
 
 .btn.large {
-  font-size: 20px;
+  font-size: $fs-l0;
   padding: 8px 35px;
   min-width: 180px;
 }
 /*PRIMARY*/
 .btn.primary {
-  color: #ffffff;
-  background-color: #e5007d;
-  border-color: #E92C93;
+  color: $white;
+  background-color: $color-cerise-500;
+  border-color: $color-cerise-400;
 }
 
 .btn.primary:hover {
-  background-color: #E92C93;
-  border-color: #ED4DA4;
+  background-color: $color-cerise-400;
+  border-color: $color-cerise-300;
 }
 
 .btn.primary:active {
-  background-color: #ce0070;
-  border-color: #e5007d;
+  background-color: $color-cerise-600;
+  border-color: $color-cerise-500;
 }
 /*PRIMARY LIGHT*/
 .btn.primary-light {
-  color: #e5007d;
-  background-color: #ffffff;
+  color: $color-cerise-500;
+  background-color: $white;
   border-color: #f6f6f6;
 }
 
 .btn.primary-light:hover {
-  color: #ffffff;
-  background-color: #E92C93;
-  border-color: #ED4DA4;
+  color: $white;
+  background-color: $color-cerise-400;
+  border-color: $color-cerise-300;
 }
 
 .btn.primary-light:active {
-  color: #ffffff;
-  background-color: #ce0070;
-  border-color: #e5007d;
+  color: $white;
+  background-color: $color-cerise-600;
+  border-color: $color-cerise-500;
 }
 /*SECONDARY*/
 .btn.secondary {
-  color: #e5007d;
-  background-color: none;
-  border-color: #e5007d;
+  color: $color-cerise-500;
+  background-color: transparent;
+  border-color: $color-cerise-500;
 }
 
 .btn.secondary:hover {
-  color: #ffffff;
-  background-color: #E92C93;
-  border-color: #E92C93;
+  color: $white;
+  background-color: $color-cerise-400;
+  border-color: $color-cerise-400;
 }
 
 .btn.secondary:active {
-  color: #ffffff;
-  background-color: #ce0070;
-  border-color: #ce0070;
+  color: $white;
+  background-color: $color-cerise-600;
+  border-color: $color-cerise-600;
 }
 /*SECONDARY LIGHT*/
 .btn.secondary-light {
-  color: #ffffff;
-  background-color: none;
-  border-color: #ffffff;
+  color: $white;
+  background-color: transparent;
+  border-color: $white;
 }
 
 .btn.secondary-light:hover {
-  color: #e5007d;
-  background-color: #ffffff;
+  color: $color-cerise-500;
+  background-color: $white;
   border-color: #f6f6f6;
 }
 
 .btn.secondary-light:active {
-  color: #ffffff;
-  background-color: #ce0070;
-  border-color: #ce0070;
+  color: $white;
+  background-color: $color-cerise-600;
+  border-color: $color-cerise-600;
 }
 /*INACTIVE BUTTONS*/
 .btn.inactive-light {
