--- a/src/app/components/cookie-bar/cookie-bar.component.html
+++ b/src/app/components/cookie-bar/cookie-bar.component.html
@@ -5,7 +5,12 @@
       <a class="read-more fs-m0" routerLink="{{JARoutes.aboutCookies.url()}}">{{'cookies.read_more' | translate}}</a>
     </p>
     <div class="cookies-button">
-      <button type="button" class="btn-secondary-light btn-small btn fs-m0" (click)="acceptCookiesConsent()">Accept</button>
+      <base-button
+        (click)="acceptCookiesConsent()"
+        [buttonText]="'cookies.accept.button' | translate"
+        kind="secondary-light"
+        size="small">
+      </base-button>
     </div>
   </div>
 </div>
