--- a/src/app/components/job-map-marker/job-map-marker.component.html
+++ b/src/app/components/job-map-marker/job-map-marker.component.html
@@ -4,6 +4,12 @@
     <p class="job-map-marker-info-adress-field"><i class="fa fa-map-marker" aria-hidden="true"></i> {{job.address}}</p>
     <span class="job-map-marker-info-salary">{{job.grossAmountWithCurrency}}</span>
     <span class="job-map-marker-info-salary-per-hour">{{job.hours}}h ({{job.hourlyPay.grossSalary}} {{job.hourlyPay.currency}}/h)</span>
-    <div class="btn-secondary btn-xsmall btn job-map-marker-info-button" (click)="goToJob()">Go to job</div>
+    <base-button
+      (click)="goToJob()"
+      [buttonText]="'map.marker.info.button' | translate"
+      class="job-map-marker-info-button"
+      kind="secondary"
+      size="xsmall">
+    </base-button>
   </sebm-google-map-info-window>
 </sebm-google-map-marker>
