--- a/src/app/views/job-details/job-details.component.html
+++ b/src/app/views/job-details/job-details.component.html
@@ -17,18 +17,42 @@
         </div>
       </div>
 
-      <div class="btn-secondary-light btn-medium btn" *ngIf="(user && !userJob)" (click)="onApplyForJobButtonClick()">{{'assignment.status.apply' | translate}}</div>
+      <base-button
+        (click)="onApplyForJobButtonClick()"
+        [buttonText]="'assignment.status.apply' | translate"
+        *ngIf="(user && !userJob)"
+        kind="secondary-light"
+        size="medium">
+      </base-button>
 
       <div *ngIf="!user" class="sign-in-or-create-container">
-        <div routerLink="{{JARoutes.login.url()}}" class="btn-secondary-light btn-small btn sign-in-button">{{'assignment.status.log_in' | translate}}</div><br/>
-        <div routerLink="{{JARoutes.registerUser.url()}}" class="btn-primary-light btn-small btn">{{'assignment.status.create_account' | translate}}</div>
+        <base-button
+          [routerLink]="JARoutes.login.url()"
+          [buttonText]="'assignment.status.log_in' | translate"
+          [fluid]="true"
+          kind="secondary-light"
+          size="small">
+        </base-button>
+        <br/>
+        <base-button
+          [routerLink]="JARoutes.registerUser.url()"
+          [buttonText]="'assignment.status.create_account' | translate"
+          [fluid]="true"
+          kind="primary-light"
+          size="small">
+        </base-button>
       </div>
 
       <h3 class="applied-text" *ngIf="userJob && !userJob.accepted">{{'assignment.status.applied' | translate}}</h3>
 
       <div *ngIf="userJob && userJob.accepted && !userJob.willPerform">
         <h5 class="time-left-text">{{'assignment.status.offer' | translate}} {{userJob.remainsConfirmationHours}} {{'common.hour' | translate}} {{userJob.remainsConfirmationMinutes}} {{'common.min' | translate}}</h5>
-        <div class="btn-primary-light btn-large btn provide-answer-button" (click)="onConfirmJobButtonClick()">{{'assignment.status.reply' | translate}}</div>
+        <base-button
+          (click)="onConfirmJobButtonClick()"
+          [buttonText]="'assignment.status.reply' | translate"
+          kind="primary-light"
+          size="large">
+        </base-button>
         <h3 *ngIf="applyForJobErrorMessageVisible">{{'assignment.status.confirmation_error' | translate}}</h3>
       </div>
 
