--- a/src/app/components/inputs/custom-radio-button-input/custom-radio-button-input.component.scss
+++ b/src/app/components/inputs/custom-radio-button-input/custom-radio-button-input.component.scss
@@ -23,18 +23,18 @@
         width: 2em;
         height: 2em;
         border-radius: 2em;
-        /*hard border*/
-        border: 0.125em solid $color-primary-cerise;
-        box-shadow: 0 0 0 0.1em $color-primary-cerise;
-        /*light shadow*/
+        // hard border
+        border: .125em solid $color-primary-cerise;
+        box-shadow: 0 0 0 .1em $color-primary-cerise;
+        // light shadow
         margin: 0 auto;
-        transition: 0.5s ease all;
-        /*animation here*/
+        transition: .5s ease all;
+        // animation here
       }
 
       &:checked + .custom-radio-button-span:before {
         background: $color-primary-cerise;
-        box-shadow: 0 0 0 0.1em $color-primary-cerise;
+        box-shadow: 0 0 0 .1em $color-primary-cerise;
       }
     }
   }
