--- a/src/app/components/job-list-item/job-list-item.component.scss
+++ b/src/app/components/job-list-item/job-list-item.component.scss
@@ -28,7 +28,7 @@
   margin-top: 15px;
   text-align: center;
   text-transform: uppercase;
-  top: 0.85em;
+  top: .85em;
   width: 100px;
 }
 .job-meta-details {
