--- a/src/app/components/pager/pager.component.scss
+++ b/src/app/components/pager/pager.component.scss
@@ -2,7 +2,7 @@
 
 
 @mixin navigationButtonProperties($text-alignment, $primary-color) {
-  padding-top: 0.4em;
+  padding-top: .4em;
   text-align: $text-alignment;
   color: $primary-color;
   > i {
