--- a/src/app/views/confirmation/confirmation.component.scss
+++ b/src/app/views/confirmation/confirmation.component.scss
@@ -33,7 +33,7 @@
       color: $color-gray-500;
       cursor: pointer;
       &:hover {
-        opacity: 0.5;
+        opacity: .5;
       }
     }
 
