--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -39,7 +39,7 @@
       border-width: 2px;
       border-style: solid;
       border-color: $color-gray-200;
-      padding: 0 0.5em;
+      padding: 0 .5em;
       text-align: center;
       vertical-align: center;
       line-height: 22px;
@@ -61,7 +61,7 @@
 
 .menu-overlay-container {
   height: 100%;
-  background: rgba(255, 255, 255, 0.5);
+  background: rgba(255, 255, 255, .5);
   text-align: right;
 
   .menu-container {
@@ -109,7 +109,7 @@
             font-size: 16px;
 
             &:hover {
-              opacity: 0.7;
+              opacity: .7;
             }
           }
         }
@@ -225,7 +225,7 @@
           text-transform: uppercase;
 
           &:hover {
-            background: rgba(0, 0, 0, 0.2);
+            background: rgba(0, 0, 0, .2);
           }
         }
       }
