--- a/src/app/styles/tooltips.scss
+++ b/src/app/styles/tooltips.scss
@@ -25,8 +25,8 @@
   opacity: 0;
   position: absolute;
   z-index: 1000 !important;
-  transition-duration: 0.25s;
-  transition-timing-function: cubic-bezier(0.35, 0, 0.35, 1);
+  transition-duration: .25s;
+  transition-timing-function: cubic-bezier(0.35, 0, .35, 1);
 }
 
 .tooltip-bottom span:before,
@@ -41,7 +41,7 @@
   height: 0;
   position: absolute;
 }
-/* Tool tip Top */
+// Tool tip Top
 .tooltip-top {
   span {
     bottom: 100%;
@@ -60,13 +60,12 @@
 
   .tooltip-visible {
     margin-bottom: 10px;
-    /* End Position */
+    // End Position
     visibility: visible;
     opacity: 1;
   }
 }
-/* tooltip left
--------------------------------------------------------------- */
+// tooltip left
 .tooltip-left {
   span {
     right: 100%;
@@ -90,8 +89,7 @@
     opacity: 1;
   }
 }
-/* tooltip right
--------------------------------------------------------------- */
+// tooltip right
 .tooltip-right {
   span {
     left: 100%;
@@ -115,8 +113,7 @@
     opacity: 1;
   }
 }
-/*tooltip bottom
--------------------------------------------------------------- */
+// tooltip bottom
 .tooltip-bottom {
   span {
     left: -10px;
@@ -140,13 +137,13 @@
     opacity: 1;
   }
 }
-/* Tooltip Color */
+// Tooltip Color
 .tooltip-color-blue span {
   color: #ffffff !important;
   background: $color-blue-500;
   background: linear-gradient(to bottom, $color-blue-400 0%, $color-blue-500 100%);
   border-radius: 4px;
-  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4);
+  text-shadow: 0 1px 0 rgba(0, 0, 0, .4);
 
   &:before {
     border-color: $color-blue-500;
@@ -170,7 +167,7 @@
   background: #206906;
   background: linear-gradient(to bottom, #37790c 0%, #206906 100%);
   border-radius: 4px;
-  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4);
+  text-shadow: 0 1px 0 rgba(0, 0, 0, .4);
 
   &:before {
     border-color: #206906;
@@ -193,13 +190,13 @@
     border-bottom: 1px solid #205a06;
   }
 }
-/*orange*/
+// orange
 .tooltip-color-orange span {
   color: #ffffff !important;
   background: #c34722;
   background: linear-gradient(to bottom, #cb581f 0%, #c34722 100%);
   border-radius: 4px;
-  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4);
+  text-shadow: 0 1px 0 rgba(0, 0, 0, .4);
 
   &:before {
     border-color: #c34722;
@@ -222,13 +219,13 @@
     border-bottom: 1px solid #ac3f17;
   }
 }
-/*red*/
+// red
 .tooltip-color-red span {
   color: #ffffff !important;
   background: #b01c34;
   background: linear-gradient(to bottom, #c01e38 0%, #b01c34 100%);
   border-radius: 4px;
-  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4);
+  text-shadow: 0 1px 0 rgba(0, 0, 0, .4);
 
   &:before {
     border-color: #b01c34;
