--- a/src/app/styles/typography.scss
+++ b/src/app/styles/typography.scss
@@ -30,9 +30,9 @@ $fs-xxxxl: 48px;
 
 @mixin truncate-owerflowing-text-multiline($font-size: $paragraph-font-size, $line-height: 1.4, $lines-to-show: 3, $excerpt-bg: transparent) {
   background: $excerpt-bg;
-  display: block; /* Fallback for non-webkit */
+  display: block; // Fallback for non-webkit
   display: -webkit-box;
-  max-height: $font-size*$line-height*$lines-to-show; /* Fallback for non-webkit */
+  max-height: $font-size*$line-height*$lines-to-show; // Fallback for non-webkit
   font-size: $font-size;
   line-height: $line-height;
   -webkit-line-clamp: $lines-to-show;
