--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,7 +19,7 @@ body {
     &.disabled {
       box-shadow: none;
       cursor: not-allowed;
-      opacity: 0.95;
+      opacity: .95;
       pointer-events: none;
     }
   }
