Load style fix for circular image upload

--- a/src/app/components/inputs/circular-image-input/circular-image-input.component.scss
+++ b/src/app/components/inputs/circular-image-input/circular-image-input.component.scss
@@ -1,5 +1,11 @@
 .ui.image {
   object-fit: cover;
+  cursor: pointer;
+
+  &.uploading {
+    cursor: none;
+    opacity: 0.4;
+  }
 
   &.mini {
     height: 35px;
